--- a/index.html
+++ b/index.html
@@ -3,85 +3,186 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encuesta de Opinión</title>
+    <title>Formulario de Reseña</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 400px;
-            margin: 50px auto;
-            text-align: center;
-        }
-        form {
             display: flex;
-            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f5f5f5;
         }
-        input, textarea, button {
-            margin: 10px 0;
-            padding: 10px;
-            font-size: 16px;
+
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 320px;
         }
+
+        .star {
+            font-size: 40px;
+            cursor: pointer;
+            color: #a3a3a3; /* Color dorado oscuro por defecto */
+            transition: color 0.2s ease-in-out;
+        }
+
+        .highlighted {
+            color: #ffd700; /* Color dorado brillante al pasar el ratón */
+        }
+
+        .selected {
+            color: #ffd700; /* Color dorado brillante al seleccionar */
+        }
+
+        .star-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 15px;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
         button {
             background-color: #28a745;
             color: white;
+            padding: 10px;
             border: none;
+            border-radius: 5px;
             cursor: pointer;
+            margin-top: 10px;
+            width: 100%;
         }
+
+        label[for="feedback"] {
+            display: block;
+            margin-top: 15px;
+        }
+
         button:hover {
             background-color: #218838;
+        }
+
+        #additionalFields {
+            visibility: hidden;
+            height: 0;
+            overflow: hidden;
+            transition: height 0.3s ease;
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <h1>Formulario de Reseña</h1>
+        <p>¿Cómo calificarías tu experiencia?</p>
+        <div class="star-container">
+            <span class="star" data-value="1">&#9733;</span>
+            <span class="star" data-value="2">&#9733;</span>
+            <span class="star" data-value="3">&#9733;</span>
+            <span class="star" data-value="4">&#9733;</span>
+            <span class="star" data-value="5">&#9733;</span>
+        </div>
 
-    <h2>Déjanos tu Opinión</h2>
-    
-    <form onsubmit="event.preventDefault(); submitReview();">
-        <label for="rating">Calificación (1-5):</label>
-        <input type="number" id="rating" min="1" max="5" required>
-        
-        <label for="email">Email:</label>
-        <input type="email" id="email" required>
-
-        <label for="feedback">Comentarios:</label>
-        <textarea id="feedback" placeholder="Escribe tu opinión aquí..."></textarea>
-
-        <button type="submit">Enviar</button>
-    </form>
+        <form id="reviewForm">
+            <div id="additionalFields">
+                <label for="email">Correo electrónico:</label>
+                <input type="email" id="email" name="email">
+                <label for="feedback">¿Cómo podemos mejorar?</label>
+                <textarea id="feedback" name="feedback"></textarea>
+            </div>
+            <button type="submit">Enviar Reseña</button>
+        </form>
+    </div>
 
     <script>
-        function submitReview() {
-            alert("🚀 Enviando tu opinión...");
+        const stars = document.querySelectorAll('.star');
+        let selectedRating = 0;
+        const additionalFields = document.getElementById('additionalFields');
+        const emailInput = document.getElementById('email');
+        const feedbackInput = document.getElementById('feedback');
 
-            var rating = document.getElementById("rating").value;
-            var email = document.getElementById("email").value;
-            var feedback = document.getElementById("feedback").value;
-
-            console.log("📩 Datos enviados:", { calificacion: rating, email: email, feedback: feedback });
-
-            fetch("https://script.google.com/macros/s/AKfycbz2tErUCqI8NJ_8XPxeWbhxJbQmFecXJB-VL90UbHpW7l6O42zkn9l1iPyLCNtvgKjt/exec", {  
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    calificacion: rating,
-                    email: email,
-                    feedback: feedback
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log("✅ Respuesta recibida:", data);
-                alert(data.mensaje);
-                if (data.url) {
-                    console.log("🔗 Redirigiendo a:", data.url);
-                    window.location.href = data.url;
-                }
-            })
-            .catch(error => {
-                console.error("❌ Error en la petición:", error);
-                alert("Hubo un problema al enviar la opinión.");
+        function highlightStars(rating) {
+            stars.forEach(star => {
+                const starValue = parseInt(star.getAttribute('data-value'));
+                star.classList.toggle('highlighted', starValue <= rating);
             });
         }
-    </script>
 
+        function updateStars(rating) {
+            stars.forEach(star => {
+                const starValue = parseInt(star.getAttribute('data-value'));
+                star.classList.toggle('selected', starValue <= rating);
+            });
+        }
+
+        function toggleAdditionalFields(rating) {
+            if (rating < 4) {
+                additionalFields.style.visibility = 'visible';
+                additionalFields.style.height = 'auto';
+                emailInput.setAttribute('required', 'true');
+                feedbackInput.setAttribute('required', 'true');
+            } else {
+                additionalFields.style.visibility = 'hidden';
+                additionalFields.style.height = '0';
+                emailInput.removeAttribute('required');
+                feedbackInput.removeAttribute('required');
+            }
+        }
+
+        stars.forEach(star => {
+            star.addEventListener('mouseover', function () {
+                const hoverRating = parseInt(this.getAttribute('data-value'));
+                highlightStars(hoverRating);
+            });
+
+            star.addEventListener('mouseout', function () {
+                highlightStars(selectedRating);
+            });
+
+            star.addEventListener('click', function () {
+                selectedRating = parseInt(this.getAttribute('data-value'));
+                updateStars(selectedRating);
+                toggleAdditionalFields(selectedRating);
+            });
+        });
+
+        document.getElementById('reviewForm').addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            if (selectedRating >= 4) {
+                window.location.href = "https://g.page/r/CcyHqKHvbtoWEBM/review";
+                return;
+            }
+
+            if (selectedRating < 4 && (!emailInput.value || !feedbackInput.value)) {
+                alert("Por favor, complete los campos de correo y comentarios.");
+                return;
+            }
+
+            const data = { email: emailInput.value, calificacion: selectedRating, feedback: feedbackInput.value };
+
+            fetch('https://script.google.com/macros/s/AKfycbyT8QnzPSZHo8399QyqMzPv3MnjfV48GeZRoyWxGJPb2uTy61VWyXkGJAf6fE9_S77W/exec', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data),
+                mode: 'no-cors'
+            }).then(() => {
+                alert("¡Gracias por tus comentarios!");
+            }).catch(error => {
+                console.error("Error al enviar la reseña:", error);
+                alert("Hubo un problema al enviar tu reseña. Intenta de nuevo.");
+            });
+        });
+    </script>
 </body>
 </html>
